20220823/나이키동영상/css/888.css
@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Play:wght@400;700&display=swap");
/* reset css */
* {
  margin: 0;
  padding: 0;
}
ul {
  list-style: none;
}
a {
  text-decoration: none;
  color: #bbb;
}
img {
  border: 0;
}

/* 풀스크린으로 동작하도록 지정(가로/세로 스크롤바 제거) */
body {
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: #111;
}

/* 동영상(.vid) 스타일 */
.vid {
  width: 100%;
  height: 100%;
  opacity: 0.9;
  left: 0;
  top: 0;
}

.vid video {
  width: 100%;
  min-width: 1920px;
  position: relative;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

h1 {
  position: fixed;
  top: 40px;
  left: 50px;
  z-index: 10;
}

header {
  top: 0;
  width: 700px;
  position: fixed;
  height: 100%;
  background-color: #bbb;
  transform: skewX(30deg);
  right: -400px;
  opacity: 0.7;
}

#gnb {
  width: 220px;
  position: absolute;
  right: 0;
  top: 150px;
}

#gnb > li {
  position: relative;
}
header #gnb > li > a {
  display: block;
  width: 220px;
  height: 50px;
  font: bold 18px/3 play;
  color: #222;
  text-align: left;
  padding-left: 40px;
  box-sizing: border-box;
}

#gnb em {
  display: inline-block;
  transform: skewX(-15deg);
  font-style: normal;
}

#gnb > li.on > a,
#gnb > li:hover > a {
  background-color: #111;
  color: #fff;
}

/* 2차메뉴 스타일 */
#gnb li ul {
  position: absolute;
  left: 230px;
  top: 0;
  opacity: 0;
  visibility: hidden;
  transition: all 0.6s;
  border-bottom: 1px solid #6fc8c7;
}

#gnb ul a {
  display: block;
  width: 150px;
  background-color: #222;
  font: bold 16px/2.5 arial;
  color: #fff;
  box-sizing: border-box;
  padding-left: 50px;
  margin-bottom: 3px;
  transition: all 0.6s;
  border-bottom: 1px solid #82d4d4;
}
/* #gnb > li > ul > li > a {
  display: block;
  width: 220px;
  height: 40px;
  background-color: #222;
  border-bottom: 1px solid #6fc8c7;
  font-size: 16px;
  line-height: 2.5;
  font-weight: bold;
  font-family: arial;
  color: #fff;
  margin-bottom: 3px;
  padding-left: 50px;
  box-sizing: border-box;
  transition: all 0.6s;
} */

/* 2차 메뉴 호버 시 스타일 */
#gnb li:hover ul {
  left: 220px;
  opacity: 1;
  visibility: visible;
}
#gnb ul a:hover {
  background-color: #82d4d4;
  color: #333;
}

/* sns 버튼 스타일 */
#sns {
  position: fixed;
  top: 60px;
  right: 50px;
}
#sns li {
  float: left;
  margin-right: 30px;
}
/* sns 버튼(웹폰트 아이콘) 스타일 */
#sns .fa {
  font-size: 25px;
  color: #333;
  opacity: 0.6;
  transition: all 0.6s;
}
#sns .fa:hover {
  opacity: 1;
  transform: scale(1.2);
}
.middle_line {
  position: fixed;
  left: 50%;
  width: 500px;
  height: 100%;
  top: 0;
  margin-left: -350px;
  transform: skewX(30deg);
  background-color: rgba(0, 0, 0, 0.3);
}
.logo {
  position: fixed;
  top: 40px;
  left: 40px;
  z-index: 10;
  width: 280px;
}
.logo img {
  width: 100%;
  height: auto;
}
.txtBox {
  width: 360px;
  height: 280px;
  position: fixed;
  top: 200px;
  left: 70px;
}
.txt {
  position: absolute;
  top: 200px;
  right: 0;
  font-size: 34px;
  font-family: play;
  color: #fff;
  letter-spacing: -2px;
}
.txt strong {
  font: bold 34px arial;
  color: #82d4d4;
  margin-left: 20px;
}
.txtBox .txt img {
  width: 150px;
  vertical-align: middle;
}
.tit {
  position: absolute;
  top: 0;
  left: 0;
  font-size: 160px;
  color: #82d4d4;
  font-family: monoton;
  letter-spacing: -1px;
}

.tit em {
  font-size: 50px;
  font-family: play;
  color: #fff;
}

/* 컨텐츠 박스 스타일 */
#side {
  position: fixed;
  bottom: 0;
  width: 800px;
  height: 100%;
  background-color: #111;
  transform: skewX(30deg);
  opacity: 0.5;
  left: -800px;
  transition: all 0.6s;
}
#side:hover {
  left: -500px;
  opacity: 0.8;
}
#side .con {
  width: 800px;
  height: 100%;
  position: absolute;
  right: 150px;
  bottom: 0;
  background-color: #000;
  padding: 10px;
  transition: all 1s;
}
#side:hover .con {
  right: 50px;
}
#side .con p {
  width: 300px;
  height: 100px;
  right: 50px;
  position: absolute;
  bottom: 0;
}

#side .con p:nth-child(1) {
  bottom: 270px;
  transform: translate(200px);
  transition: all 0.8s;
}
#side .con p:nth-child(2) {
  bottom: 160px;
  transform: translate(200px);
  transition: all 0.8s;
}
#side .con p:nth-child(3) {
  bottom: 50px;
  transform: translate(200px);
  transition: all 0.8s;
}

#side:hover .con p {
  transform: translate(0px);

  transform: skewX(-30deg);
}
#side:hover .con p em {
  display: inline-block;
  /* transform: skewX(40deg); */
  color: #82d4d4;
  font: bold 16px/1.7 arial;
}
#side .con p img {
  width: 300px;
  height: 70px;
  opacity: 0.3;
  transition: all 0.5s;
}
#side .con p img:hover {
  scale: 1.1;
  opacity: 1;
}

/* 자동 롤링버튼(더블 화살표 효과) */

#side .btn {
  width: 150px;
  height: 50px;
  position: absolute;
  bottom: 40px;
  left: 100px;
  color: #82d4d4;
  transform: skewX(-30deg);
}
.btn i {
  font-size: 60px;
  position: absolute;
  right: 0;
}

.btn i:nth-child(1) {
  animation: ani linear 1.5s 0s infinite;
  /* linear 속도가 일정하게 */
}
.btn i:nth-child(2) {
  animation: ani linear 1.5s 0.5s infinite;
}
.btn i:nth-child(3) {
  animation: ani linear 1.5s 1s infinite;
}

@keyframes ani {
  0% {
    left: 0;
    transform: scale(1);
    opacity: 1;
  }
  100% {
    left: 100px;
    transform: scale(1.5);
    opacity: 0;
  }
}

#side:hover .btn {
  left: 700px;
}

